FTR add gh pages deploy scripts

--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "es-dev-server --app-index index.html --node-resolve --watch --open"
+    "start": "es-dev-server --app-index index.html --node-resolve --watch --open",
+    "copyindex": "cp index.html dist",
+    "copyassets": "cp -r --parents assets dist",
+    "copywc": "cp -r --parents node_modules/@webcomponents/webcomponentsjs/bundles dist && cp --parents node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist",
+    "build": "rm -rf dist && mkdir dist && npm run copyindex && npm run copyassets && npm run copywc && rollup -c",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [],
   "author": "Alexander Bukley",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "7.8.3",
     "lit-element": "2.2.1"
   },
   "devDependencies": {
-    "es-dev-server": "1.45.2"
+    "@webcomponents/webcomponentsjs": "2.4.3",
+    "es-dev-server": "1.45.2",
+    "gh-pages": "2.2.0",
+    "rollup": "2.1.0",
+    "rollup-plugin-babel": "4.4.0",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-terser": "5.3.0"
   }
 }
